# condense

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  api.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build-agent.yml  build-desktop.yml  ci.yml
agent/: __init__.py  app.py  cli.py  client.py  config.py  sync.py  watcher.py
desktop/: Dockerfile.builder  README.md  TESTING.md  package-lock.json  package.json
desktop/provisioning/: manifest.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agent.rs  backend.rs  config.rs  lib.rs  main.rs  paths.rs  provisioning.rs
docs/: DECISIONS.md  REVIEW-2026-07-06.md  REVIEW-2026-07-07.md  ROADMAP.md  SPEC.md  api-schema.md  dev-split.md  foundation.md
docs/Arthur/: DECISIONS.md  README.md  ROADMAP.human.md  ROADMAP.md
docs/Arthur/active/: human.md  machine.md
docs/Arthur/templates/: human.template.md
docs/Quentin/: DECISIONS.md  README.md  ROADMAP.human.md  ROADMAP.md
docs/Quentin/active/: SESSION-HANDOFF.md  STATUS.md  human.md  machine.md
docs/Quentin/archive/v0.1.0-version-aware-retrieval/: STATUS.md  human.md  machine.md
docs/Quentin/archive/v0.2.0-toolbox-answer/: machine.md
docs/Quentin/archive/v0.3.0-ux-workbench/: machine.md
docs/Quentin/templates/: human.template.md
docs/active/: machine.md
docs/channel/: README.md  from-arthur.md  from-quentin.md
docs/templates/: machine.template.md
packaging/: Dockerfile.linux  README.md  build_all.sh  build_linux.sh  build_linux_full.sh  build_linux_in_container.sh  build_macos.sh  make_appimage.sh  sift-agent-cli.spec  sift-agent.spec  sift-engine.spec  sift_agent_cli_entry.py  sift_agent_entry.py  sift_engine_entry.py
packaging/server-bundle/: README.md  env.example  run.bat  run.sh
scripts/: build-desktop-test-kit.sh  build-server-bundle.sh  install-macos.sh  install-ubuntu.sh  install-windows.ps1  install.sh  run-agent-watch.sh  run-engine.sh  smoke-engine-bundle.sh
scripts/test-kit/: README.txt  manifest.template.json  setup-test.sh  uninstall-test.sh
sift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sift/adapters/embedding/: fake.py
sift/adapters/rerank/: null.py
sift/adapters/store/: fake.py
sift/api/: schemas.py
sift/core/: ports.py  types.py
site/: README.md  index.html
src/sift/: config.py  factory.py
src/sift/adapters/chunking/: token.py
src/sift/adapters/conversation/: fake.py  libsql.py
src/sift/adapters/embedding/: fake.py  openai_compat.py
src/sift/adapters/llm/: fake.py  null.py  openai_compat.py
src/sift/adapters/ocr/: fallback_parser.py  mistral.py
src/sift/adapters/parsing/: markitdown.py
src/sift/adapters/rerank/: crossencoder_http.py  llm_judge.py  null.py
src/sift/adapters/store/: fake.py  libsql.py
src/sift/api/: deps.py  health.py  main.py  routes.py  schemas.py  tokens.py  v1.py
src/sift/core/: errors.py  hashing.py  ports.py  types.py
src/sift/pipelines/: answer.py  documents.py  ingest.py  search.py  tools.py
tests/: conftest.py  test_fake_embedder.py  test_fake_store.py  test_null_reranker.py  test_ports.py  test_schemas.py  test_types.py
tests/adapters/chunking/: test_token_chunker.py
tests/adapters/conversation/: test_fake_conversation_store.py  test_libsql_conversation_store.py
tests/adapters/parsing/: test_markitdown_parser.py
tests/adapters/store/: test_libsql_store.py
tests/agent/: test_agent.py  test_cli_json.py  test_config.py  test_skip_details.py  test_sync.py  test_watcher.py
tests/contract/: test_config_env_parity.py  test_core_is_stdlib_only.py  test_embedder_contract.py  test_layering.py  test_reranker_contract.py  test_roundtrip.py  test_schemas.py  test_store_contract.py  test_vocabulary_rule.py
tests/pipelines/: test_answer.py  test_answer_boundary.py  test_ingest.py  test_tools.py  test_tools_schema.py
tests/surface/: conftest.py  test_config.py  test_factory.py  test_search_pipeline.py  test_version_collapse.py
tests/surface/adapters/: test_llm.py  test_llm_tool_calling.py  test_mistral_ocr.py  test_ocr_fallback.py  test_openai_embedder.py  test_rerank.py
tests/surface/api/: test_auth.py  test_cors.py  test_documents.py  test_health.py  test_main.py  test_routes.py  test_tokens.py  test_v1_answer.py  test_v1_conversations.py  test_v1_documents.py  test_v1_tools.py
web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: AccessTokens.tsx  AgentDownloads.tsx  AgentMenu.tsx  App.css  App.tsx  Chat.tsx  ChatHistory.tsx  Composer.tsx  FindTurn.tsx  Ingest.tsx  Library.tsx  Logo.tsx  Search.tsx  SettingRow.tsx  SettingsIcons.tsx  SettingsTooltip.tsx  SetupWizard.tsx  SlashField.tsx  SystemMenu.tsx  TopBar.tsx  api.ts  documents.ts  formatSetting.ts  grounding.ts  index.css  ingestClient.ts  platform.ts  provider.ts  sourceSnippet.tsx  tauri.ts  thumbnail.ts
web/src/lib/: openExternal.ts
web/src/markdown/: ChatMarkdown.tsx  CodeBlock.tsx  MermaidBlock.tsx  prismBash.ts
