[project]
name = "sift"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9", "pydantic-settings>=2.14", "fastapi>=0.128",
                "uvicorn[standard]>=0.34", "httpx>=0.27", "openai>=1.50"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pyright>=1.1"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
