[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sift"
version = "0.0.0"
description = "Knowledge ingestion & retrieval service — RAG as a Lego block"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",          # required by FastAPI for the multipart /ingest UploadFile route
]

# Heavy/optional inference + storage deps stay out of the base install so Step-0 CI
# (base + dev) installs fast and needs no Turso/Ollama/TEI. Adapters opt in per group.
[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "pyright"]
store = ["libsql"]            # the current SDK; libsql-client/-experimental are deprecated
parsing = ["markitdown[pdf,docx,pptx,xlsx]", "charset-normalizer"]  # converters + explicit charset sniff (real .txt/.md aren't all ASCII)
chunking = ["tokenizers", "huggingface-hub", "tiktoken"]  # bge-m3 tokenizer (default) + tiktoken fallback
inference = ["httpx"]
# The standalone ingestion agent: HTTP client + cross-platform file watching + per-user config.
# The desktop app's UI is stdlib Tkinter (no pip dep; on Ubuntu install the `python3-tk` package).
agent = ["httpx", "watchdog", "platformdirs"]

[project.scripts]
sift-agent = "agent.app:main"     # the small always-on desktop watcher (Tkinter)
sift-ingest = "agent.cli:main"    # one-shot / --watch headless ingestion

[tool.hatch.build.targets.wheel]
packages = ["src/sift", "agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests"]
extraPaths = ["src"]
venv = ".venv"          # local-DX: bare `pyright` finds the project venv (per Dev B)
venvPath = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
