[package]
name = "condense"
version = "0.4.0"
description = "Condense — local-first document chat & search"
authors = ["AetherisAI"]
edition = "2021"
rust-version = "1.77"

[lib]
# Standard Tauri 2 main/lib split: `src/main.rs` is a thin entry point that calls
# `condense_lib::run()`; the crate name carries a `_lib` suffix (mirrors
# create-tauri-app's convention) so mobile targets can later link the same
# library crate as a static/cdylib alongside the desktop binary.
name = "condense_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
