[package]
name = "condense"
version = "0.4.0"
description = "Condense — local-first document chat & search"
authors = ["AetherisAI"]
edition = "2021"
rust-version = "1.77"

[lib]
# Standard Tauri 2 main/lib split: `src/main.rs` is a thin entry point that calls
# `condense_lib::run()`; the crate name carries a `_lib` suffix (mirrors
# create-tauri-app's convention) so mobile targets can later link the same
# library crate as a static/cdylib alongside the desktop binary.
name = "condense_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# External links (System drawer's "API documentation", any future landing/GitHub link): the
# WebView never lets `window.open`/`target="_blank"` reach the OS browser, and `tauri-plugin-shell`'s
# own `open` command was split out into this dedicated plugin (Tauri 2.1+) specifically so a
# capability can grant "open http(s)/mailto/tel URLs in the default app" WITHOUT also granting
# shell command execution — a much tighter scope than `shell:allow-open`, and the actively
# maintained path going forward (see capabilities/default.json).
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# T5 (provisioning + backend/agent supervision) additions:
# "signal" (T7/D65): SIGTERM/SIGINT handler in lib.rs — terminal/systemd kills must run the
# same child-process cleanup as a normal window close (tao installs no signal handlers itself).
tokio = { version = "1", features = ["process", "fs", "io-util", "macros", "rt-multi-thread", "time", "sync", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tar = "0.4"
flate2 = "1"
zip = "2"
sha2 = "0.10"
rand = "0.8"

# T7/D65: PR_SET_PDEATHSIG on spawned engine/embedder children (backend.rs) — the kernel
# SIGTERMs them if this process dies for ANY reason (incl. SIGKILL/crash, which no in-process
# cleanup path can ever cover). Linux-only; macOS (kqueue NOTE_EXIT) and Windows (Job objects)
# equivalents are a later WP.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
